hphp/hack/test/typecheck/hh_fixme2.php
<?hh // partial

function test(): int {
  /* HH_FIXME[9999] */ return 'foo';
}
